--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "darkghosthunter/flow-sdk": "^1.1",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "6.3.3",
         "laravel/framework": "^6.2",
         "laravel/passport": "^8.0",
         "laravel/tinker": "^1.0",
